--- a/styles/TaskList.module.css
+++ b/styles/TaskList.module.css
@@ -10,19 +10,7 @@
   padding: 0 10px; /* Added padding to avoid card edges touching screen edges */
 }
 
-/* Backdrop styling */
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-/* styles/TaskList.module.css */
+/* Confirmation Modal for Deletion */
 .confirmationModal {
   position: fixed;
   top: 0;
@@ -84,8 +72,6 @@
   cursor: pointer;
 }
 
-
-
 .cancelButton:focus, .confirmButton:focus {
   outline: none;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -109,7 +95,7 @@
   }
 }
 
-/* TaskList.module.css */
+/* Task category styling */
 .taskCategory {
   display: flex;
   align-items: center;
@@ -121,6 +107,7 @@
   margin-right: 8px;
   font-size: 1.5rem;
 }
+
 /* Flip card container */
 .flipCard {
   background-color: transparent;
