--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -134,10 +134,11 @@
 
 /* Chart Container */
 .chartContainer {
-  margin-top: 40px;
+  margin-bottom: 70px;
   display: flex;
   justify-content: center;
   padding: 0 20px;
+  ;
 }
 
 /* Chart Card */
@@ -198,95 +199,10 @@
   transform: rotateY(180deg);
 }
 
-/* Front side styling */
-.flipCardFront,
-.flipCardBack {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border-radius: 12px;
-}
 
-/* Front side styling */
-.flipCardFront {
-  background-color: #ecf0f1;
-  color: #34495e;
-  padding: 20px;
-}
 
-.flipCardFront:hover {
-  background-color: #bdc3c7;
-}
 
-/* Back side styling */
-.flipCardBack {
-  background-color: #095981;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  transform: rotateY(180deg);
-  padding: 20px;
-  overflow-y: auto;
-}
 
-/* Task title */
-.taskTitle {
-  font-size: 1.2rem;
-  font-weight: 600;
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-/* Task actions */
-.taskActions {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 15px;
-}
-
-.taskButton {
-  padding: 10px 16px;
-  font-size: 15px;
-  border: none;
-  border-radius: 8px;
-  background-color: #2980b9;
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-}
-
-.taskButton:hover {
-  background-color: #1f5f8a;
-  transform: translateY(-2px);
-}
-
-/* Flip back button */
-.flipBackButton {
-  background-color: #2980b9;
-  margin-top: 15px;
-}
-
-.flipBackButton:hover {
-  background-color: #2980b9;
-  transform: translateY(-2px);
-}
-
-/* Description text */
-.flipCardBack p {
-  font-size: 14px;
-  line-height: 1.5;
-  margin-bottom: 10px;
-  text-align: left;
-  max-height: 80px;
-  overflow-y: auto;
-  word-wrap: break-word;
-  max-width: 90%;
-}
 
 /* Responsive Design */
 
