--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -37,17 +37,20 @@
 }
 
 .sidebar ul {
-  list-style-type: none;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: large  ;
+  list-style-type:circle;
   padding: 0;
 }
 
 .sidebar li {
   margin: 10px 0;
+
 }
 
 .sidebar a {
   display: flex;
-  align-items: center;
+  align-items:baseline;
   gap: 10px;
   color: white;
   text-decoration: none;
